k8s/covid-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: covid-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: covid-frontend
  template:
    metadata:
      labels:
        app: covid-frontend
    spec:
      containers:
        - name: covid-frontend
          image: covid
          ports:
          - containerPort: 5000
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: covid-frontend2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: covid-frontend
  template:
    metadata:
      labels:
        app: covid-frontend
    spec:
      containers:
        - name: covid-frontend
          image: covid2
          ports:
          - containerPort: 8000
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: covid-frontend
spec:
  type: NodePort
  selector:
    app: covid-frontend
  ports:
  - port: 5000
