k8s/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: covid-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: covid-virtual-service
  namespace: default
spec:
  hosts:
  - "*"
  gateways:
  - covid-gateway
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: covid-frontend
        port:
          number: 5000
